        threads are properly created up the the "maxThreads" value entered.
        Reported by Kristoffer Gronowski
      - Added new Series#getValuesArray(...) method variants.
      - Added ClientResource#maxRedirects property to prevent infinite 
        redirects, in addition to the existing infinite loop detection.
        Suggested by Henry Story.
    - Enhancements
      - Keep alive empty lines between messages in a persistent connections are
        now eat silently. Reported by John Logsdon.
      - Refactored the internal NIO connector to better support the differences
        between HTTP and SIP protocols regarding transaction management.
      - Added a new SDC extension providing a client connector for the 
        Google Secure Data Connector protocol compatible with the official SDC 
        agent.
    - Bugs fixed
      - Fixed bug preventing persistent connections reuse when an entity is
        present. Reported by John Logsdon.
      - Fixed potential issue with double consumption of SIP ACK messages. 
        Reported by John Logsdon.
      - Fixed issue with asynchronous responses and provisional responses
        preventing the resue of persistent connections. 
        Reported by Phil Dunks.
      - Fixed NIO connector (HTTP and SIP) bug potentially causing infinite
        loops. Reported by John Logsdon and Phil Dunks.
      - Fixed SIP methods INFO, SUBSCRIBE and SUBSCRIBE to allow responses.
        Reported by Phil Dunks.
      - Fixed NIO connector regression potentially blocking a connection if 
        all the entity couldn't be read from the socket in one shot.
      - Fixed Directory bug when handling conditional requests.
     - Misc
      - If the Engine#logFormatter is set to null, the log formatter of the
        console is not changed anymore.
      - Updated Jackson library to version 1.7.1.
      - Added an "org.restlet.engine.helper" attribute to expose the internal